Overflow issue fix

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body{
     font-size: 14px;
     flex-direction: column;
     overflow-y: auto;
+    overflow-x: hidden;
     display: none;
     /* transform: translateX(400px); */
 }
@@ -212,6 +213,7 @@ body{
 
 .btn-container{
     display: flex;
+    margin-bottom: 20px;
     gap: 1.2vw;
 }
 
